<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_menu"
    tools:context=".main_activity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/simplified_game_name"
        android:textSize="52sp"
        style="@style/WhiteTextWithShadow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/singlePlayerButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="48dp"
        app:cornerRadius="30dp"
        android:text="@string/singleplayer"
        android:textSize="26sp"
        style="@style/WhiteTextWithShadow"
        app:backgroundTint="@null"
        android:background="@drawable/bg_start_button"
        app:icon="@drawable/ic_single_player"
        app:iconGravity="start"
        app:iconPadding="-30dp"
        app:iconSize="34dp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiPlayerButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="48dp"
        app:cornerRadius="30dp"
        android:text="@string/multiplayer"
        android:textSize="26sp"
        style="@style/WhiteTextWithShadow"
        app:backgroundTint="@null"
        android:background="@drawable/bg_start_button"
        app:icon="@drawable/ic_multi_player"
        app:iconGravity="start"
        app:iconPadding="-30dp"
        app:iconSize="34dp"
        app:layout_constraintTop_toBottomOf="@id/singlePlayerButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="48dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/bg_settings_button"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/cd_settings_button"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/achievementsButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed" />


    <ImageButton
        android:id="@+id/achievementsButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="80dp"
        android:background="@drawable/bg_achievements_button"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/cd_achievements_button"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/settingsButton"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>