<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main_menu"
    tools:context=".main_activity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:text="@string/multiplayer"
        android:textSize="52sp"
        style="@style/WhiteTextWithShadow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/player1NameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/bg_edittext_player1"
        android:fontFamily="@font/comic_sans"
        android:hint="@string/player_input_one"
        android:inputType="text"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/player2NameEditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_edittext_player2"
        android:fontFamily="@font/comic_sans"
        android:hint="@string/player_input_two"
        android:inputType="text"
        android:paddingStart="16dp"
        tools:ignore="RtlSymmetry"
        app:layout_constraintTop_toBottomOf="@id/player1NameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="48dp"
        app:cornerRadius="30dp"
        android:text="@string/start_game"
        android:textSize="26sp"
        style="@style/WhiteTextWithShadow"
        app:backgroundTint="@null"
        android:background="@drawable/bg_start_button"
        app:layout_constraintTop_toBottomOf="@id/player2NameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>